1.手机号注册获取效验验证码之前增加账号检测 2.注册提交验证码跳转到设置密码前效验再效验账号 3.我的页面退出登录昵称头像清除 4.短信邀请修改 5.系统推送消息 6.三方登录图标错乱修改 ‘

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -898,6 +898,7 @@
     <string name="Tap1_CurrentVersion">当前版本</string>
     <string name="Tap1_DownloadFirmwareFai">固件下载失败</string>
     <string name="Tap1_DownloadFirmwareTips">即将下载设备固件，升级设备固件时需保持客户端与设备连接于同一网络</string>
+    <string name="Tap1_UpdateFirmwareTips">即将升级设备固件，请保持客户端与设备连接于同一网络</string>
     <string name="Tap1_FirmwareDownloading">正在下载(%s)</string>
     <string name="Tap1_FirmwareUpdate">固件升级</string>
     <string name="Tap1_FirmwareUpdateFai">固件升级失败</string>
