--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -272,7 +272,6 @@
   <string name="MON_1">每週一</string>
   <string name="MON_2">一</string>
   <string name="MSG_BIND">設備新增成功</string>
-  <string name="MSG_BOTTOM_LINE">這是底線</string>
   <string name="MSG_DELETE_TITLE">刪除後不能恢復，請再次確認</string>
   <string name="MSG_DETAILS">查看詳情</string>
   <string name="MSG_LOW_BATTERY">設備電量較低，請立即充電</string>
@@ -423,11 +422,9 @@
   <string name="RET_EUPLOADFILE">上傳失敗</string>
   <string name="RET_EUPLOADFILE_TOOSS">上傳失敗</string>
   <string name="RET_MSG_EDATABASE">資料庫錯誤</string>
-  <string name="RET_MSG_EUNKNOWN">未知錯誤(%s)</string>
   <string name="RE_ADD_BUTTONG">重新添加</string>
   <string name="RE_ADD_LABEL">設備軟體更新完成</string>
   <string name="RIGN_SUC">註冊成功</string>
-  <string name="Request_TimeOut">請求超時</string>
   <string name="Reset_Suc">復位成功</string>
   <string name="SAT">星期六</string>
   <string name="SAT_1">每週六</string>
@@ -652,7 +649,6 @@
   <string name="Tap1_TitleName">首頁</string>
   <string name="Tap1_Tosetup">設定</string>
   <string name="Tap1_Update">升級</string>
-  <string name="Tap1_UpdateFirmwareTips">即將升級設備固件，請保持客戶端與設備連接於同一網路</string>
   <string name="Tap1_device_deleted">此設備已被刪除</string>
   <string name="Tap1_iHome_Associate">關聯</string>
   <string name="Tap1_iHome_Associated">已关联</string>
@@ -719,7 +715,7 @@
   <string name="Tap3_Friends_DeleteFriends">確定刪除此好友?</string>
   <string name="Tap3_Friends_Details">詳細資料</string>
   <string name="Tap3_Friends_Myaccount">我的帳號</string>
-  <string name="Tap3_Friends_NoBindTips">使用親友功能需要綁定郵箱</string>
+  <string name="Tap3_Friends_NoBindTips">使用親友功能需要綁定手機/郵箱</string>
   <string name="Tap3_Friends_Share">分享設備給%s</string>
   <string name="Tap3_Friends_Tips">無論多遠，思念從未中斷，增加親友，彼此就在身旁</string>
   <string name="Tap3_Friends_UserInfo">個人資訊</string>
@@ -822,7 +818,7 @@
   <string name="YOUR_FEEDBACK">每一位用戶的意見與建議都很重要</string>
   <string name="Yesterday">昨天</string>
   <string name="addvideo_searching">正在搜索&#8230;</string>
-  <string name="app_name">加菲狗</string>
+  <string name="app_name">Clever Dog</string>
   <string name="app_share">推薦給朋友</string>
   <string name="callto">呼叫</string>
   <string name="camera_auth">相機</string>
@@ -844,7 +840,7 @@
   <string name="getting">獲取中&#8230;</string>
   <string name="has_copy">已複製</string>
   <string name="has_not_sdcard">未發現Micro SD卡</string>
-  <string name="help_url">https://yf.jfgou.com:8081/helps/zh&#8211;hk.html</string>
+  <string name="help_url">https://yf.jfgou.com:8081/help/zh&#8211;hk.html</string>
   <string name="help_url_Doby">https://yf.jfgou.com:8081/help/en_doby.html</string>
   <string name="isStorageLow">Micro SD卡存儲空間不足，無法下載。</string>
   <string name="is_connecting_video">正在連接攝影機</string>
